# postgres-admin

./: .gitignore  CLAUDE.local.md.example  CLAUDE.md  IDEA-CARD.md  INSIGHTS-FROM-BROKER-BOT.md  LICENSE  POC-COMPLETE.md  PRD-ru.md  PRD.md  QUICKSTART.md  README.md  docker-compose.yml  postgresql-admin-dashboard-research.md
.claude/: MEMORY-SETUP-SUMMARY.md
.claude/agents/: postgres-python-expert.md
.claude/commands/: README.md  add-decision.md  create-bug.md  create-improvement.md  create-release.md  create-spec.md  git-commit.md  log-change.md  log-dev.md  new-feature.md  review-docs.md
.claude/imports/: architecture.md  code-style.md  commands.md  project-info.md  tech-stack.md  workflow.md
Documentations/: 00-overview.md  01-agents.md  02-commands.md  03-skills.md  04-output-styles.md  05-hooks.md  06-settings.md  07-memory.md  08-mcp.md  09-best-practices.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/routers/: alembic.py
backend/app/services/: __init__.py  alembic_service.py
docs/: CHANGELOG.md
docs/adr/: 0000-template.md  0001-initial-architecture.md
docs/architecture/: database-schema.md  system-overview.md  tech-stack.md
docs/backlog/: README.md
docs/backlog/bugs/: bug-template.md
docs/backlog/features/: feature-template.md
docs/backlog/improvements/: improvement-template.md
docs/dev-journal/: 2025-10.md  README.md
docs/specs/: 001-visual-alembic-ui.md  README.md  spec-template.md
example_project/: README.md  alembic.ini
example_project/alembic/: env.py
example_project/models/: __init__.py  base.py  post.py  user.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
(+7 files in other folders)
