[tool.poetry]
name = "postgresql-admin-backend"
version = "0.1.0"
description = "Backend for PostgreSQL Admin Dashboard with Visual Alembic UI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.119.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
alembic = "^1.17.0"
asyncpg = "^0.30.0"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.1.1"
aiosqlite = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
black = "^25.9.0"
ruff = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
